@@ -45,3 +45,4 @@ Added struct forward declarations to metadata
 Added ImVector_Construct() and ImVector_Destruct() helpers
 Added typedefs to the metadata output
 Added parsed versions of complex types to the metadata output
+Added marking of internal API elements
